# avansync

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/src/: CMakeLists.txt  Client.cpp  Client.hpp  ClientConsole.cpp  ClientConsole.hpp  main.cpp
client/src/command/: CreateDirectoryCommand.cpp  CreateDirectoryCommand.hpp  DeleteCommand.cpp  DeleteCommand.hpp  DirectoryListingCommand.cpp  DirectoryListingCommand.hpp  GetCommand.cpp  GetCommand.hpp  InfoCommand.cpp  InfoCommand.hpp  PutCommand.cpp  PutCommand.hpp  QuitCommand.cpp  QuitCommand.hpp  RenameCommand.cpp  RenameCommand.hpp  SyncCommand.cpp  SyncCommand.hpp
cmake/: FindAsio.cmake  FindFilesystem.cmake
common/src/: AsioConnection.cpp  AsioConnection.hpp  CMakeLists.txt  Command.hpp  Connection.hpp  Console.hpp  Context.hpp
common/src/connection/: AsioConnection.cpp  AsioConnection.hpp  Connection.hpp
common/src/filesystem/: DirectoryEntry.hpp  FileBuffer.hpp  Filesystem.hpp  FilesystemException.cpp  FilesystemException.hpp  StandardDirectoryEntry.cpp  StandardDirectoryEntry.hpp  StandardFilesystem.cpp  StandardFilesystem.hpp  VectorFileBuffer.cpp  VectorFileBuffer.hpp  fs.cpp  fs.hpp
common/src/handler/: BaseRequestHandler.cpp  BaseRequestHandler.hpp  CommandRequestHandler.cpp  CommandRequestHandler.hpp  RequestHandler.hpp  RequestHandlerChain.cpp  RequestHandlerChain.hpp
server/src/: CMakeLists.txt  Context.hpp  Request.cpp  Request.hpp  Server.cpp  Server.hpp  ServerConsole.cpp  ServerConsole.hpp  main.cpp
server/src/command/: Command.hpp  CreateDirectoryCommand.cpp  CreateDirectoryCommand.hpp  DeleteCommand.cpp  DeleteCommand.hpp  DirectoryListingCommand.cpp  DirectoryListingCommand.hpp  GetCommand.cpp  GetCommand.hpp  InfoCommand.cpp  InfoCommand.hpp  PutCommand.cpp  PutCommand.hpp  QuitCommand.cpp  QuitCommand.hpp  RenameCommand.cpp  RenameCommand.hpp
server/src/handler/: BaseRequestHandler.cpp  BaseRequestHandler.hpp  CommandRequestHandler.cpp  CommandRequestHandler.hpp  RequestHandler.hpp  RequestHandlerChain.cpp  RequestHandlerChain.hpp
server/tests/: CMakeLists.txt  example-test.cpp  main.cpp
server/tests/command/: CreateDirectoryCommandTest.cpp  DeleteCommandTest.cpp  DirectoryListingCommandTest.cpp  GetCommandTest.cpp  InfoCommandTest.cpp  PutCommandTest.cpp  QuitCommandTest.cpp  RenameCommandTest.cpp
server/tests/test-utils/: TestDirectoryEntry.cpp  TestDirectoryEntry.hpp  TestFileBuffer.cpp  TestFileBuffer.hpp
